# mpris-player2

./: Cargo.toml  README.md
src/: lib.rs  main.rs  mediaplayer2.rs  mediaplayer2_player.rs  metadata.rs  mpris_player.rs  playback_status.rs
