[package]
name = "mpris-player"
version = "0.1.0"
description = "A library for creating MPRIS2 media players over D-Bus"
authors = ["Felix Häcker <haecker.felix1207@gmail.com>"]
license = "GPL-3.0+"
homepage = "https://github.com/haecker-felix/mpris-player"
repository = "https://github.com/haecker-felix/mpris-player"
keywords = ["mpris", "dbus"]


[dependencies]
dbus = "0.6.2"
glib = "0.6.0"
gtk = "0.5.0"