[package]
name = "mpris-player"
version = "0.2.0"
description = "A library for creating MPRIS2 media players over D-Bus"
authors = ["Felix Häcker <haecker.felix1207@gmail.com>"]
license = "GPL-3.0+"
homepage = "https://gitlab.gnome.org/World/Rust/mpris-player"
repository = "https://gitlab.gnome.org/World/Rust/mpris-player"
keywords = ["mpris", "dbus"]


[dependencies]
dbus = "0.6.4"
glib = "0.7.0"
