[package]
name = "mpris-player2"
version = "0.6.0"
edition = "2021"
description = "A library for creating MPRIS2 media players over D-Bus"
authors = ["poly000", "Felix Häcker <haeckerfelix@gnome.org>"]
license = "GPL-3.0+"
documentation = "https://docs.rs/mpris-player2/"
homepage = "https://github.com/waylyrics/mpris-player2"
repository = "https://github.com/waylyrics/mpris-player2"
keywords = ["mpris", "dbus"]

[dependencies]
dbus = "0.6.5"
glib = "0.18.2"
